--- a/ASP-1/Services/Email/congratulation_email.html
+++ b/ASP-1/Services/Email/congratulation_email.html
@@ -1,6 +1,69 @@
-﻿<h1>Здравствуйте, {{RealName}}!</h1>
-<p>Мы рады сообщить вам, что ваша учетная запись на нашем сайте успешно создана! Теперь вы можете войти на сайт, используя свой логин и пароль.</p>
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Подтверждение почты</title>
+    <style>
+        /* Общие стили */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            padding: 20px;
+            margin: 0;
+        }
 
-<p>Если у вас возникнут какие-либо вопросы или проблемы, пожалуйста, свяжитесь с нами через форму обратной связи на сайте.</p>
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            background-color: #ffffff;
+            border: 1px solid #dddddd;
+            padding: 30px;
+        }
 
-<p>С уважением, ASP-201</p>
+        h1 {
+            font-size: 24px;
+            margin-top: 0;
+        }
+
+        p {
+            margin-bottom: 10px;
+        }
+
+        .confirmation-code {
+            font-size: 36px;
+            font-weight: bold;
+            text-align: center;
+            padding: 20px;
+            background-color: #f2f2f2;
+            border: 2px dashed #dddddd;
+            margin-bottom: 30px;
+        }
+
+        .note {
+            font-style: italic;
+            text-align: center;
+            margin-top: 0;
+        }
+
+        /* Медиа-запрос для мобильных устройств */
+        @media (max-width: 480px) {
+            .container {
+                padding: 20px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Подтверждение почты</h1>
+        <p>Здравствуйте, {{RealName}}</p>
+        <p>Мы рады сообщить вам, что ваша учетная запись на нашем сайте успешно создана! Теперь вы можете войти на сайт, используя свой логин и пароль.</p>
+
+        <p>Если у вас возникнут какие-либо вопросы или проблемы, пожалуйста, свяжитесь с нами через форму обратной связи на сайте.</p>
+
+        <p>С уважением, Cybersport.ua</p>
+    </div>
+</body>
+</html>
+
